fix input corners on iphone

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,7 @@ button {
 input {
 	font-size: 1rem;
 	font-family: 'Raleway', sans-serif;
+	border-radius: 0;
 }
 
 /* Change the white to any color ;) */
@@ -19,6 +20,10 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active  {
     -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
+input[type] {
+	-webkit-appearance: none;
 }
 
 h1 {
